--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
+body {
+  background-image: url(../src/img/banana-leaves-pattern-tropical-background-vector-14381131.jpg);
+  position: relative;
+}
+
+#wrapper {
+  max-width: 1200px;
+  /* background:rgba(255,255,255, 0.9);  */
+  margin: 0 auto;
+}
+
+aside {
+  width: 240px;
+  position: fixed;
+  height: 100%;
+  background-color: #275129;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+  color: #FFF;
+  margin-right: 20px;
+}
+
+aside .heading {
+  position: relative;
+  padding: 30px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+aside .avatar-wrap {
+  position: relative;
+  width: 186px;
+  height: 186px;
+  background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
+                radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+  border-radius: 100%;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+aside .avatar {
+  position: absolute;
+  top: 7px;
+  left: 8px;
+  border-radius: 100%;
+  margin-bottom: 50px;
+  filter: brightness(1.1);
 }
