Added basic styles and nav

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,40 @@
+@charset "UTF-8";
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 body {
   background-image: url(../src/img/banana-leaves-pattern-tropical-background-vector-14381131.jpg);
   position: relative;
@@ -37,7 +74,7 @@ aside .avatar-wrap {
 
 aside .avatar {
   position: absolute;
-  top: 7px;
+  top: 8px;
   left: 8px;
   border-radius: 100%;
   margin-bottom: 50px;
