--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 html {
   box-sizing: border-box;
   font-size: 16px;
@@ -42,37 +41,33 @@ body {
 
 #wrapper {
   max-width: 1200px;
-  /* background:rgba(255,255,255, 0.9);  */
+  font-family: "Roboto", sans-serif;
+  display: flex;
   margin: 0 auto;
 }
-
-aside {
+#wrapper aside {
   width: 240px;
   position: fixed;
   height: 100%;
   background-color: #275129;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   color: #FFF;
   margin-right: 20px;
 }
-
-aside .heading {
+#wrapper aside .heading {
   position: relative;
   padding: 30px;
   text-align: center;
 }
-
-aside .avatar-wrap {
+#wrapper aside .heading .avatar-wrap {
   position: relative;
   width: 186px;
   height: 186px;
-  background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
-                radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+  background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
   border-radius: 100%;
   text-align: center;
 }
-
-aside .avatar {
+#wrapper aside .heading .avatar-wrap .avatar {
   position: absolute;
   top: 8px;
   left: 8px;
@@ -80,3 +75,5 @@ aside .avatar {
   margin-bottom: 50px;
   filter: brightness(1.1);
 }
+
+/*# sourceMappingURL=App.css.map */
