--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,10 @@ ul {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -42,7 +46,7 @@ body {
 
 #wrapper {
   max-width: 1200px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   display: flex;
   margin: 0 auto;
 
@@ -77,6 +81,48 @@ body {
           margin-bottom: 50px;
           filter: brightness(1.1);
         }
+      }
+    }
+
+    nav {
+      margin-top: 50px;
+      width: 100%;
+      padding: 15px 5px;
+      border-top: 1px solid #316334;
+      border-bottom: 1px solid #316334;
+
+      li {
+        list-style: none;
+        text-align: center;
+        display: block;
+        height: 50px;
+
+        a {
+          text-transform: uppercase;
+          font-size: .94rem;
+          letter-spacing: 1px;
+          display: block;
+          padding: 5px 0;
+          color: #FFF;
+          font-weight: 600;
+          position: relative;
+          overflow: hidden;
+          z-index: 1;
+          cursor: pointer;
+          font-weight: 200;
+          font-size: 18px;
+          line-height: 2.5rem;
+
+          &.active {
+            background: #39783c;
+          }
+  
+          &:hover {
+            background: #39783c;
+            transition: all .4s ease-out;
+          }
+        }
+
       }
     }
   }
