--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@ html {
   font-size: 16px;
 }
 
+body,
+html,
+#id {
+  height: 100%;
+}
+
 *,
 *:before,
 *:after {
@@ -40,17 +46,28 @@ img {
 
 body {
   background-image: url(../src/img/banana-leaves-pattern-tropical-background-vector-14381131.jpg);
+  background-repeat: repeat;
   position: relative;
+}
+body::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.15);
+  z-index: -1;
 }
 
 #wrapper {
-  max-width: 1200px;
+  width: 1200px;
   font-family: "Nunito Sans", sans-serif;
-  display: flex;
   margin: 0 auto;
+  padding: 50px;
+  height: 100%;
 }
 #wrapper aside {
-  width: 240px;
+  width: 260px;
   position: fixed;
   height: 100%;
   background-color: #275129;
@@ -70,6 +87,7 @@ body {
   background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
   border-radius: 100%;
   text-align: center;
+  margin-bottom: 40px;
 }
 #wrapper aside .heading .avatar-wrap .avatar {
   position: absolute;
@@ -107,6 +125,7 @@ body {
   font-weight: 200;
   font-size: 18px;
   line-height: 2.5rem;
+  outline: none;
 }
 #wrapper aside nav li a.active {
   background: #39783c;
@@ -114,6 +133,112 @@ body {
 #wrapper aside nav li a:hover {
   background: #39783c;
   transition: all 0.4s ease-out;
+}
+#wrapper main {
+  margin-left: 280px;
+  width: calc(100% - 280px);
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 20px;
+  font-size: 18px;
+}
+#wrapper main .border {
+  padding: 40px 20px;
+  border-left: 5px solid #D89F2D;
+  border-right: 5px solid #E9DB8A;
+  background-image: linear-gradient(90deg, #D89F2D, #E9DB8A), linear-gradient(90deg, #D89F2D, #E9DB8A);
+  background-size: 100% 5px;
+  background-position: 0 0, 0 100%;
+  background-repeat: no-repeat;
+}
+#wrapper main .border .component .title {
+  position: relative;
+}
+#wrapper main .border .component .title h1 {
+  font-weight: 700;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  z-index: 999;
+  font-size: 2.57rem;
+  line-height: 3.2857rem;
+}
+#wrapper main .border .component .title span {
+  font-size: 4.5rem;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  line-height: 1;
+  font-weight: 900;
+  color: #275129;
+  display: inline-block;
+  text-transform: uppercase;
+  z-index: -1;
+  -webkit-transform: translateY(-40%);
+  transform: translateY(-40%);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  white-space: nowrap;
+}
+#wrapper main .border .component h2 {
+  text-align: right;
+  font-size: 2rem;
+  line-height: 2.7rem;
+  margin-bottom: 20px;
+}
+#wrapper main .border .component h2 span {
+  color: #275129;
+}
+#wrapper main .border .component p {
+  margin-bottom: 1rem;
+}
+#wrapper main .border .component ul li b {
+  width: 120px;
+  display: inline-block;
+  position: relative;
+  margin-right: 10px;
+}
+#wrapper main .border .component ul li b::after {
+  content: ":";
+  position: absolute;
+  top: 0;
+  left: auto;
+  right: 0;
+}
+#wrapper main .border .component ul li span {
+  display: inline-block;
+  width: 360px;
+}
+#wrapper main a.btn {
+  margin-top: 30px;
+  background-color: #275129;
+  color: #FFF;
+  text-transform: uppercase;
+  padding: 0 30px;
+  display: inline-block;
+  font-size: 0.9rem;
+  letter-spacing: 2px;
+  height: 50px;
+  line-height: 50px;
+  border: 0;
+  position: relative;
+}
+#wrapper main a.btn::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: auto;
+  bottom: 0;
+  height: 2px;
+  width: 100%;
+}
+#wrapper main a.btn:hover {
+  transition: all 0.4s ease-out;
+}
+#wrapper main a.btn:hover::before {
+  transform: scaleX(1);
+  transition: all 0.4s ease-out;
+  background: #D89F2D;
 }
 
 /*# sourceMappingURL=App.css.map */
