--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,8 @@ img {
 }
 
 body {
-  background-image: url(../src/img/banana-leaves-pattern-tropical-background-vector-14381131.jpg);
+  background-image: url(../src/img/b5c6655359940e111d0dc791dea0b859.jpg);
+  background-size: cover;
   background-repeat: repeat;
   position: relative;
 }
@@ -55,7 +56,6 @@ body::before {
   display: block;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.15);
   z-index: -1;
 }
 
@@ -87,7 +87,7 @@ body::before {
   background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
   border-radius: 100%;
   text-align: center;
-  margin-bottom: 40px;
+  margin: 0 auto;
 }
 #wrapper aside .heading .avatar-wrap .avatar {
   position: absolute;
