--- a/src/App.scss
+++ b/src/App.scss
@@ -53,7 +53,10 @@ img {
 }
 
 body {
-  background-image: url(../src/img/banana-leaves-pattern-tropical-background-vector-14381131.jpg);
+  background-image: url(../src/img/b5c6655359940e111d0dc791dea0b859.jpg);
+  //background-image: url(../src/img/iphone-wallpaper-24.jpg);
+  //background-image: url(../src/img/iphone-wallpaper-12.jpg);
+  background-size: cover;
   background-repeat: repeat;
   position: relative;
 
@@ -63,7 +66,7 @@ body {
     display: block;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.15);
+    //background: rgba(255, 255, 255, 0.15);
     z-index: -1;
   }
 }
@@ -96,7 +99,7 @@ body {
         background: $gold-gradient;
         border-radius: 100%;
         text-align: center;
-        margin-bottom: 40px;
+        margin: 0 auto;
 
         .avatar {
           position: absolute;
