--- a/src/App.css
+++ b/src/App.css
@@ -93,8 +93,8 @@ body {
   margin-top: 50px;
   width: 100%;
   padding: 15px 5px;
-  border-top: 1px solid #316334;
-  border-bottom: 1px solid #316334;
+  border-top: 1px solid #39783c;
+  border-bottom: 1px solid #39783c;
 }
 #wrapper aside nav li {
   list-style: none;
