Added component contact

--- a/src/App.scss
+++ b/src/App.scss
@@ -215,6 +215,11 @@ body {
           font-size: 1.14rem;
           line-height: 1.857rem;
         }
+
+        h4 {
+          font-size: 1.71rem;
+          line-height: 2.43rem;
+        }
       }
     }
 
@@ -323,6 +328,13 @@ body {
             }
           }
         }
+      }
+    }
+
+    #contact {
+
+      form {
+        
       }
     }
   }
