--- a/src/App.css
+++ b/src/App.css
@@ -191,6 +191,10 @@ body {
   font-size: 1.14rem;
   line-height: 1.857rem;
 }
+#wrapper main .border .component h4 {
+  font-size: 1.71rem;
+  line-height: 2.43rem;
+}
 #wrapper main a.btn {
   margin-top: 30px;
   background-color: #275129;
