--- a/src/App.css
+++ b/src/App.css
@@ -297,6 +297,10 @@ body {
 #wrapper main #portfolios .portfolios-wrap {
   display: flex;
   flex-wrap: wrap;
+  flex: 0 0 33.333333%;
+}
+#wrapper main #portfolios .portfolios-wrap .portfolios-box {
+  width: 33.333333%;
 }
 #wrapper main #contact form .form-field {
   margin-top: 30px;
