--- a/src/App.css
+++ b/src/App.css
@@ -55,12 +55,13 @@ body {
   width: 1200px;
   font-family: "Nunito Sans", sans-serif;
   margin: 0 auto;
-  padding: 50px;
+  padding: 0 50px;
   height: 100%;
 }
 #wrapper aside {
   width: 260px;
   position: fixed;
+  top: 0;
   height: 100%;
   background-color: #275129;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
@@ -127,7 +128,7 @@ body {
   transition: all 0.4s ease-out;
 }
 #wrapper main {
-  margin-left: 280px;
+  margin: 50px 0 50px 280px;
   width: calc(100% - 280px);
   background-color: rgba(255, 255, 255, 0.9);
   padding: 20px;
@@ -248,6 +249,7 @@ body {
 }
 #wrapper main .btn:hover {
   transition: all 0.4s ease-out;
+  background-color: #39783c;
 }
 #wrapper main .btn:hover::before {
   transform: scaleX(1);
