--- a/src/App.scss
+++ b/src/App.scss
@@ -64,12 +64,13 @@ body {
   width: 1200px;
   font-family: 'Nunito Sans', sans-serif;
   margin: 0 auto;
-  padding: 50px;
+  padding: 0 50px;
   height: 100%;
 
   aside {
     width: 260px;
     position: fixed;
+    top: 0;
     height: 100%;
     background-color: $dark-green;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
@@ -145,7 +146,7 @@ body {
   }
 
   main {
-    margin-left: 280px;
+    margin: 50px 0 50px 280px;
     width: calc(100% - 280px);
     background-color: rgba(255, 255, 255, 0.9);
     padding: 20px;
@@ -283,6 +284,7 @@ body {
 
       &:hover {
         transition: all .4s ease-out;
+        background-color: $light-green;
 
         &::before {
           transform: scaleX(1);
