Added margin-top to title of each portfolio item

--- a/src/App.css
+++ b/src/App.css
@@ -196,6 +196,7 @@ body {
   font-size: 1.43rem;
   line-height: 2.14rem;
   font-weight: 700;
+  margin-top: 15px;
 }
 #wrapper main .border .component h6 {
   font-size: 1.14rem;
