--- a/src/App.scss
+++ b/src/App.scss
@@ -221,6 +221,7 @@ body {
           font-size: 1.43rem;
           line-height: 2.14rem;
           font-weight: 700;
+          margin-top: 15px;
         }
 
         h6 {
